# network-bandwidth-annotation-manager

./: .dockerignore  .gitignore  .trivyignore  404.html  Cargo.toml  Dockerfile  LICENSE  README.md  Tiltfile  about.hbs  about.toml  cdk8s_chart.ts  debug.txt  deny.toml  deployment.yaml  devspace.yaml  example.http  index.html  justfile  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: docs.yaml  oci.yaml  rust-clippy.yml  trivy.yml
deployments/: manager.yaml  overwrite-mode.yaml
docs/: index.md
docs/features/: annotator-mode.md  overwrite-mode.md  scheduler-override.md  strip-mode.md
examples/: annotator-mode.yaml  overwrite-mode.yaml  scheduler-override.yaml  strip-mode.yaml
features/annotator-mode/: index.html
features/overwrite-mode/: index.html
features/scheduler-override/: index.html
features/strip-mode/: index.html
license/: index.html
search/: search_index.json
src/: controller.rs  main.rs  mutate.rs  quantity_parser.rs  utilrs.rs
src/utils/: mod.rs  quantity.rs
