[package]
name = "network-bandwidth-annotator"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]
description = "A dynamic admission controller setting a Kubernetes pod's network bandwidth annotations using its limits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
clap = { version = "4.0.29", features = ["cargo", "env", "derive"] }
clap-verbosity-flag = "2.0.0"
json-patch = "0.3.0"
k8s-openapi = { version = "0.16.0", features = ["v1_24"] }
kube = { version = "0.77.0", features = ["admission"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"
