[package]
name = "network-bandwidth-annotation-manager"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]
description = "A dynamic admission controller setting a Kubernetes pod's network bandwidth annotations using its limits"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-server = { version = "0.4.6", features = ["tls-rustls"] }
clap = { version = "4.1.8", features = ["cargo", "env", "derive"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
futures = "0.3.27"
json-patch = "0.3.0"
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
kube = { version = "0.80.0", features = ["admission", "client", "runtime"] }
log = "0.4.17"
regex = "1.7.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"

[profile.dev.package.backtrace]
opt-level = 3
